static/css/section/_home.scss
@charset "UTF-8";
/* ---------------------------------------------------------------
------------------------------------------------------------------
  DO NOT EDIT STYLES.CSS
  It is autogenerated.

  Project:		Canonical Careers
  Author:			Web Team at Canonical Ltd
  Last edited by:
  Last edited on:

    CONTENTS:
  -----------------------------------------------------------------
  @section business
    @subsection business > desktop
    @subsection business > server
    @subsection business > services
    @subsection business > case-studies

  @section Needs to go into patterns

  @this may turn into a pattern

  Rounded corners
  -----------------------------------------------------------------
  @include rounded_corners(top-left top-right bottom-right bottom-left);
    examples
    @include rounded_corners(0 0 4px 4px); rounded bottoms
    @include rounded_corners(4px); all corners rounded

  Base grid sass, this lives in /sites/core/static/css/core-grid.scss
  -----------------------------------------------------------------
  $base: 			16;
  $column_width:	( 60 / $base )em;
  $gutter_width: 	( 20 / $base )em;
  $grid_column: 	( 57 / $base )em; nested columns
  $grid_gutter: 	( 18 / $base )em;

  Available grid widths
  -----------------------------------------------------------------
  $one_col - 100%

  Using these enables us to give individual elements specific widths without adding a static width:

  padding: $gutter_width;
  width: 100% - ( 2 * $gutter_width );

  Colour definitiions are in /sites/core/static/css/core-constants.scss
  -----------------------------------------------------------------
  $ubuntu_orange:			#dd4814; ubuntu orange (used for text links also on any site except canonical)
  $canonical_aubergine:	#772953; canonical aubergine
  $light_aubergine:		#77216f; light aubergine (consumer)
  $mid_aubergine:			#5e2750; mid aubergine (both)
  $dark_aubergine:		#2c001e; dark aubergine (enterprise)
  $warm_grey:				#aea79f; warm grey
  $cool_grey:				#333333; cool grey
  $light_grey:			#f7f7f7; light grey

  notifications
  $error:					#df382c; red
  $warning:				#eca918; yellow
  $success:				#38b44a; green
  $information:			#19b6ee; cyan

  colour coded status - from negative to positive (icon: canonical circle)
  $status_red:			#df382c; red, for status that require immediate attention
  $status_grey:			#aea79f; grey, for disabled status or ones that donÕt require attention
  $status_yellow:			#efb73e; yellow, for status that require attention
  $status_blue:			#19b6ee; blue, for status that donÕt require action
  $status_green:			#38b44a; green, for positive status

  misc colours
  $box_solid_grey:		#efefef;

  $link_color:			$ubuntu_orange; this is the global link color, mainly used for links in content

  notes:
  -----------------------------------------------------------------
  Using '.yui3-js-enabled' for CSS with JS enabled as it's there for free atm, be nice to have just js-enabled as a class.

-----------------------------------------------------------------
-------------------------------------------------------------- */

.home {
  h1 {
    color: $white;
    font-size: 2em;
  }

  #main-content .row-hero {
    padding-top: 20px;
    margin-top: 0;
  }

  .static {
    display: block;
  }

  .animation {
    display: none;
  }

  .ubuntu-row {
    background-size: 350px auto;
    background: url('../img/home/tablet-home.png') no-repeat scroll 50% 97% rgba(255, 255, 255, 0.6);
    padding-bottom: 230px;

    h2 {
      position: relative;
    }

    .ubuntu-logo {
      background-image: url('../img/logos/logo-ubuntu-120.png');
      background-image: url('../img/logos/logo-ubuntu.svg'), none;
      background-position: left bottom;
      background-repeat: no-repeat;
      background-size: auto 0.85em;
      display: inline-block;
      height: 1em;
      margin-left: .1em;
      text-indent: -99999px;
      width: 120px;
    }
  }
  .partner-row {
    -moz-box-shadow: inset 0  4px 6px -4px rgba(0, 0, 0, 0.4), inset 0 -4px 6px -4px rgba(0, 0, 0, 0.4);
    -webkit-box-shadow: inset 0  4px 6px -4px rgba(0, 0, 0, 0.4), inset 0 -4px 6px -4px rgba(0, 0, 0, 0.4);
    background: url('../img/home/image-partners-small.jpg') 75% 40px no-repeat;
    box-shadow: inset 0  4px 6px -4px rgba(0, 0, 0, 0.4), inset 0 -4px 6px -4px rgba(0, 0, 0, 0.4);
    color: #fff;
    height: 250px;

    .fade {
      background: -moz-linear-gradient(top, #32001d 40%, transparent 100%);
      background: -o-linear-gradient(top, #32001d 40%, transparent 100%);
      background: -webkit-linear-gradient(top, #32001d 40%, transparent 100%);
      background: linear-gradient(top, #32001d 40%, transparent 100%);
      content: " ";
      height: 100%;
      left: 0;
      position: absolute;
      top: 0;
      width: 100%;

      &:after {
        background: rgba(50, 0, 29, 0.4);
        content: " ";
        height: 100%;
        position: absolute;
        width: 51%;
      }
    }
  }

  .service-row {
    background-image: url('../img/home/image-services.png');
    background: url('../img/home/image-services.svg') no-repeat scroll bottom center;
    background-size: 302px auto;
    margin-bottom: 20px;
    padding-bottom: 200px;

    .image {
      display: none;
    }
  }

  .careers-row {
    background-size: 302px auto;
    background: url('../img/home/image-careers.png') no-repeat scroll center bottom;
    margin-bottom: 20px;
    padding-bottom: 250px;

    .row {
      padding-bottom: 300px;
    }
  }
}

html.no-cssgradients body.home .partner-row {
  color: #333;

  .fade {
    background-color: $white;
  }

  .fade:after {
    background-color: $white;
  }
}

html.opera-mini body.home,
html.no-svg body.home {
  .ubuntu-row .ubuntu-logo {
    background-image: url('../img/logos/logo-ubuntu-120.png');
  }

  .service-row {
    background-image: url('../img/home/image-services.png');
  }
}
/* ... */

